# release-passport

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  development.md  examples.md  threat-model.md
docs/decisions/: 0001-deterministic-canonicalization-first.md
docs/pull-requests/: 01-foundation-project-scaffold.md  02-feature-passport-evidence-model.md  03-feature-canonicalization-and-diff.md  04-feature-local-signing-and-verification.md  05-feature-review-rendering.md  06-feature-signer-adapter-boundary.md  07-feature-capture-command-alias.md
src/release_passport/: __init__.py  __main__.py  adapters.py  canonical.py  cli.py  diffing.py  exceptions.py  fixtures.py  models.py  rendering.py  signing.py  snapshot_io.py
tests/fixtures/passport-diff/: expected-canonical.json  expected-diff.json  new.json  old.json
tests/fixtures/passport-import/: expected-passport.json
tests/fixtures/passport-render/: expected.html  expected.md
tests/fixtures/passport-signing/: expected-verification.json  signed-passport.json
tests/integration/: test_diff_command.py  test_import_command.py  test_render_command.py  test_verify_command.py
tests/unit/: test_canonical.py  test_cli.py  test_diffing.py  test_fixture_import.py  test_rendering.py  test_signing.py
