[project]
name = "release-passport"
version = "0.1.0"
description = "Auditable deployment evidence generator"
readme = "README.md"
authors = [
    { name = "Wil Birkmaier", email = "wil@birkmaier.org" }
]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7,<3",
    "rich>=14.1.0,<15",
    "typer>=0.16.0,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.17.1,<2",
    "pre-commit>=4.2.0,<5",
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "ruff>=0.12.11,<0.13",
]

[project.scripts]
release-passport = "release_passport.cli:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
packages = ["release_passport"]
